[tool.poetry]
name = "dev-shell"
version = "0.0.1"
description = "Devloper shell for easy startup..."
readme = "README.md"
authors = ["Jens Diemer <python@jensdiemer.de>"]
license = "GNU General Public License v3.0"
packages = [
    { include = "dev_shell" },
]

[tool.poetry.scripts]
devshell = 'dev_shell.dev_shell_app:devshell_cmdloop'

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
cmd2 = "*"  # https://github.com/python-cmd2/cmd2

# fix completion for Mac OS:
gnureadline = { version = "*", markers = "sys_platform == 'darwin'" }


[tool.poetry.dev-dependencies]
poetry-publish = "*"  # https://github.com/jedie/poetry-publish
isort = "*"
cmd2_ext_test = "*"
flake8 = "*"
flynt = "*"
autopep8 = "*"
pytest = "*"
pytest-randomly = "*"
pytest-cov = "*"
tox = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
line_length=120
case_sensitive=false
skip_glob=["*/htmlcov/*",]
multi_line_output=3
include_trailing_comma=true
no_lines_before="LOCALFOLDER"
default_section="THIRDPARTY"
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
lines_after_imports=2


[tool.coverage.run]
omit = [".*"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
minversion = "6.0"
norecursedirs = ".* .git __pycache__ conf coverage* dist htmlcov"
# sometimes helpfull "addopts" arguments:
#    -vv
#    --verbose
#    --capture=no
#    --trace-config
#    --full-trace
#    -p no:warnings
addopts = """
    --import-mode=importlib
    --cov=.
    --cov-report term-missing
    --cov-report html
    --cov-report xml
    --no-cov-on-fail
    --showlocals
    --doctest-modules
    --failed-first
    --last-failed-no-failures all
    --new-first
"""


[tool.tox]
# https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39,py38,py37
skip_missing_interpreters = True

[testenv]
passenv = *
whitelist_externals = pytest
commands =
    pytest
"""
